--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
